FileUpdater refactoring with Jackson xmlMapper