@@ -9,17 +9,14 @@ import com.marcomarchionni.ibportfolio.model.mapping.PositionMapperImpl;
 import com.marcomarchionni.ibportfolio.services.PositionService;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
 import org.modelmapper.ModelMapper;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.test.autoconfigure.web.servlet.WebMvcTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.http.MediaType;
 import org.springframework.test.web.servlet.MockMvc;
-import org.springframework.test.web.servlet.setup.MockMvcBuilders;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static com.marcomarchionni.ibportfolio.util.TestUtils.getSamplePosition;
 import static com.marcomarchionni.ibportfolio.util.TestUtils.getSamplePositions;
@@ -32,15 +29,13 @@ import static org.springframework.test.web.servlet.request.MockMvcRequestBuilder
 import static org.springframework.test.web.servlet.result.MockMvcResultHandlers.print;
 import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-@ExtendWith(MockitoExtension.class)
+@WebMvcTest(PositionController.class)
 class PositionControllerTest {
 
-    @Mock
+    @MockBean
     PositionService positionService;
 
-    @InjectMocks
-    PositionController positionController;
-
+    @Autowired
     MockMvc mockMvc;
     ObjectMapper mapper;
     PositionMapper positionMapper;
@@ -52,12 +47,12 @@ class PositionControllerTest {
 
     @BeforeEach
     void setup() {
-        mockMvc = MockMvcBuilders.standaloneSetup(positionController).build();
-        mapper = new ObjectMapper();
-        positionMapper = new PositionMapperImpl(new ModelMapper());
         positions = getSamplePositions();
-        positionListDtos = positions.stream().map(positionMapper::toPositionListDto)
-                .collect(Collectors.toList());
+        positionMapper = new PositionMapperImpl(new ModelMapper());
+        positionListDtos = positions
+                .stream()
+                .map(positionMapper::toPositionListDto)
+                .toList();
         position = getSamplePosition();
         positionListDto = positionMapper.toPositionListDto(position);
     }
@@ -76,12 +71,14 @@ class PositionControllerTest {
     @Test
     void updateStrategy() throws Exception {
 
+        mapper = new ObjectMapper();
+
         UpdateStrategyDto positionUpdate = UpdateStrategyDto.builder().id(position.getId()).strategyId(2L).build();
         when(positionService.updateStrategyId(any())).thenReturn(positionListDto);
 
         mockMvc.perform(put("/positions")
-                .contentType(MediaType.APPLICATION_JSON)
-                .content(mapper.writeValueAsString(positionUpdate)))
+                        .contentType(MediaType.APPLICATION_JSON)
+                        .content(mapper.writeValueAsString(positionUpdate)))
                 .andExpect(status().isOk())
                 .andExpect(content().contentType(MediaType.APPLICATION_JSON))
                 .andExpect(jsonPath("$.id", is(Math.toIntExact(position.getId()))));
